# pyDSLR

./: .editorconfig  .gitignore  README.md  main.py  prepare.sh  pyproject.toml  requirements.txt  requirements_brew.sh
app/: utils.py
app/config/: r6m2.py
app/tools/: camera.py  exif.py
booth/: capture_device.py  layout_engine.py  main.py  printer.py
booth-ui/: README.md  angular.json  package-lock.json  package.json
booth-ui/photo-booth-ui/: angular.json  package-lock.json  package.json
booth-ui/photo-booth-ui/src/: index.html
booth-ui/photo-booth-ui/src/app/: app.component.spec.ts
booth-ui/src/: index.html  styles.less  styles.scss
booth-ui/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts  capture.service.ts  config.ts
booth-ui/src/app/capture-screen/: capture-screen.component.html  capture-screen.component.scss  capture-screen.component.ts
booth-ui/src/app/print-dialog/: print-dialog.component.html  print-dialog.component.ts
booth-ui/src/app/welcome-screen/: welcome-screen.component.html  welcome-screen.component.less  welcome-screen.component.ts
booth-ui/src/app/welcome-screen/layout-preview/: layout-preview.component.html  layout-preview.component.less  layout-preview.component.scss  layout-preview.component.ts
booth/layouts/: layouts.json
examples/: bulb_mode.py  burst_mode.py  create_config.py  focus_stack.py  lightning_trigger.py
pydslr/: __init__.py  utils.py
pydslr/config/: base.py  r6m2.py
pydslr/tools/: camera.py  exif.py  layout_engine.py  printer.py
scripts/: create_config.py
