[tool.poetry]
name = "pydslr"
version = "0.1.0"
description = "Abstraction on top of gphoto2 to allow quick and easy and type-safe operation of cameras."
authors = ["Niklas Frühauf <niklas.fruehauf@sovanta.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
tqdm = "^4.66.4"
gphoto2 = "^2.5.0"
pytz = "^2024.1"
psutil = "^5.9.8"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
black = "^24.4.2"
numpy = "^1.26.4"
pillow = "^10.3.0"
pyexiftool = "^0.5.6"


[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.66.0.20240417"
pylint = "^3.2.2"
mypy = "^1.10.0"
types-psutil = "^5.9.5.20240516"
types-pytz = "^2024.1.0.20240417"
black = "^24.4.2"
isort = "^5.13.2"
opencv-python = "^4.11.0.86"

[tool.pylint]
max-line-length = 150
# poetry run pylint **/*.py

[tool.mypy]
# poetry run mypy . --explicit-package-bases

[tool.black]
line-length = 150
# poetry run black .

[tool.isort]
# poetry run isort .
profile = "black"
line_length = 150

[build-system]
requires = ["poetry"]